Fix #780: better nested list spacing

--- a/public/res/styles/base.less
+++ b/public/res/styles/base.less
@@ -319,11 +319,18 @@ blockquote {
 	}
 }
 
+/* lists, nested lists */
 ul,ol {
 	margin-bottom: @p-margin;
 	ul,ol {
 		margin-bottom: @p-margin;
 	}
+}
+
+/* make parent lists have space above, but not between them and children */
+li > p {
+  margin-top: 1.1em;
+  margin-bottom: 0;
 }
 
 kbd {
